fix:align in contact-form

--- a/src/features/ContactForm/ContactForm.scss
+++ b/src/features/ContactForm/ContactForm.scss
@@ -166,6 +166,7 @@
       display: inline-block;
       width: 45%;
       text-align: left;
+      margin-right:20px;
       line-height: 1.5;
     }
 
